Replaced AuthenticationFilter with AuthenticationController and AuthenticationService